# armbot

./: README.md
armbot_moveit_config/: CMakeLists.txt
armbot_moveit_config/launch/: armbot_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  ros_controllers.launch  setup_assistant.launch
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/lib/pkgconfig/: armbot_description.pc  armbot_moveit_config.pc  learning_tf.pc
catkin_ws/src/armbot_description/: CMakeLists.txt  package.xml
catkin_ws/src/armbot_description/launch/: model.launch
catkin_ws/src/armbot_description/meshes/: arm.stl  base_turn_table.stl  base_turn_table_basement.stl  base_turn_table_top.stl  base_turn_table_upd.stl  dynamixel_upd.stl  wrist.stl  wrist_mirror.stl  wrist_rotate.stl
catkin_ws/src/armbot_description/urdf/: base.urdf  base_gazebo.urdf
catkin_ws/src/armbot_moveit_config/: .setup_assistant  package.xml
catkin_ws/src/armbot_moveit_config/config/: armbot.srdf  (+3 more)
catkin_ws/src/learning_tf/: package.xml
ros2_ws/: frames.gv
ros2_ws/log/: latest_build
ros2_ws/src/log/: latest_build
ros2_ws/src/pose_interface/: CMakeLists.txt  package.xml
ros2_ws/src/pose_interface/msg/: Persons.msg
ros2_ws/src/pose_interface/srv/: GetPose.srv
ros2_ws/src/tfpose_ros2/: package.xml  setup.cfg  setup.py  setup_old.py
ros2_ws/src/tfpose_ros2/scripts/: broadcaster_ros.py  visualization.py
ros2_ws/src/tfpose_ros2/srv/: GetPose.srv
ros2_ws/src/tfpose_ros2/tfpose_ros2/: __init__.py  estimator.py  euler.py  eval.py  network_base.py  network_cmu.py  network_dsconv.py  network_mobilenet.py  network_mobilenet_thin.py  network_mobilenet_v2.py  networks.py  node_get_pose_service.py  pose_augment.py  runner.py
ros2_ws/src/tfpose_ros2/tfpose_ros2/mobilenet/: mobilenet_v2.py
(+13 files in other folders)
